angular componnet lifecycle

--- a/src/app/Components/AngularBasics1/angularBasics1.component.html
+++ b/src/app/Components/AngularBasics1/angularBasics1.component.html
@@ -1,4 +1,5 @@
 <div class="angularBasic1Container">
+    <p>Static text</p>
     <span>{{title | lowercase }}</span><br>
     <p>A: {{a | percent}}</p>
     <p>A: {{a | currency:'CAD'}}</p>
