--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-uiBasics></app-uiBasics> -->
-<app-angularBasics1></app-angularBasics1>
+<app-angularBasics1>    
+</app-angularBasics1>
 <!-- <app-angularBasics2></app-angularBasics2> -->
