--- a/src/app/Components/AngularBasics2/angularBasics2.component.html
+++ b/src/app/Components/AngularBasics2/angularBasics2.component.html
@@ -1,10 +1,13 @@
 <div>
-    <span>AngularBasics2 is working in Span</span><br>
+    <span>=====================AngularBasics2 is working in Span==============</span><br>
     <div>Div text</div>
     <span>Span Text</span>
     <a href="#">Anchor text</a>
     <input type="text" />
-    <h1>H1 Text</h1>
-    <h2>H2 Text</h2>
     <img>
+    <span>===============</span>
+    {{dataFromParent}}
+</div>
+<div class="buttonContainer">
+    <button (click)="onNameChange()">Click me to send data from child to parent</button>
 </div>
