twi way binding

--- a/src/app/Components/AngularBasics1/angularBasics1.component.css
+++ b/src/app/Components/AngularBasics1/angularBasics1.component.css
@@ -1,9 +1,12 @@
 .angularBasic1Container span {
     color: red;
-    font-size: 32px;
+    /* font-size: 32px;
     margin: 20px;
-    padding: 40px;
+    padding: 40px; */
 }
 .parentContent {
     background: yellow;
+}
+.twoWayBindingContainer {
+    background: green;
 }
