--- a/src/app/Components/AngularBasics2/angularBasics2.component.html
+++ b/src/app/Components/AngularBasics2/angularBasics2.component.html
@@ -2,7 +2,7 @@
     <span>=====================AngularBasics2 is working in Span==============</span><br>
     <div>Div text</div>
     <span>Span Text</span>
-    <a href="#">Anchor text</a>
+    <!-- <a href="#">Anchor text</a> -->
     <input type="text" />
     <img>
     <span>===============</span>
