--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- <app-uiBasics></app-uiBasics> -->
 <app-angularBasics1>    
 </app-angularBasics1>
+<app-siblingComponnet1></app-siblingComponnet1>
+<app-siblingComponnet2></app-siblingComponnet2>
