Object sort function added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 </app-angularBasics1>
 <app-siblingComponnet1></app-siblingComponnet1>
 <app-siblingComponnet2></app-siblingComponnet2>
+<app-parent></app-parent>
