consuming api data

--- a/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
+++ b/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
@@ -1,5 +1,5 @@
 <div>SiblingComponnet1 works</div>
 <button type="button" class="btn btn-primary" (click)="getDataFromService()">1Get Data From Servise</button>
 <ul>
-    <li *ngFor="let item of datafromSharedService; index as i">{{item}}</li>    
+    <li *ngFor="let item of datafromSharedService; index as i">{{item.username}}</li>    
 </ul>
