--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a routerLink="/first-component" routerLinkActive="active">First Component</a></li>
     <li><a routerLink="/second-component" routerLinkActive="active">Second Component</a></li>
+    <li><a routerLink="/react-forms" routerLinkActive="active">React-Forms</a></li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
