--- a/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
+++ b/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
@@ -1,7 +1,7 @@
 <div>SiblingComponnet1 works</div>
-<button type="button" class="btn btn-primary" (click)="getDataFromService()">1Get Data From Servise</button>
+<button type="button" class="btn btn-primary" (click)="getDataFromService()">Get Data From Servise</button>
 
-
+<!-- 
 <ul class="ffkflk">
     <li *ngFor="let item of datafromSharedService; index as i">
         <span>{{item.username + " "}}</span> <span>&nbsp;</span>
@@ -10,7 +10,7 @@
         <span *ngIf="isActive1">{{item.phone}}</span><span>&nbsp;</span>
         <span *ngIf="isActive2">{{item.name}}</span><span>&nbsp;</span>
     </li>
-</ul>
+</ul> -->
 
 
 
@@ -24,3 +24,54 @@
         other content here ...
     </div>
 </ng-template>
+
+<!-- 'name', 'phone', 'username', 'website', 'email' -->
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="phone">
+            <th mat-header-cell *matHeaderCellDef> Phone </th>
+            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="username">
+            <th mat-header-cell *matHeaderCellDef> Username </th>
+            <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="website">
+            <th mat-header-cell *matHeaderCellDef> Website </th>
+            <td mat-cell *matCellDef="let element"> {{element.website}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <!--   
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons 
+                   aria-label="Select page of periodic elements">
+    </mat-paginator> -->
+</div>
