--- a/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
+++ b/src/app/Components/SiblingComponnet1/SiblingComponnet1.component.html
@@ -1,6 +1,6 @@
 <div>SiblingComponnet1 works</div>
 <button type="button" class="btn btn-primary" (click)="getDataFromService()">Get Data From Servise</button>
-<button mat-raised-button color="accent"  (click)="getDataFromService()">Material Button</button>
+<button mat-raised-button color="accent"  (click)="hideTable()">Hide Table</button>
 <!-- 
 <ul class="ffkflk">
     <li *ngFor="let item of datafromSharedService; index as i">
